--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,16 +22,21 @@
 		<meta name="twitter:image" content="https://example.com/image.jpg" />
 		<meta name="language" content="ru" />
 		<meta name="robots" content="index, nofollow" />
+		<link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="./css/main.css" />
 		<link rel="icon" type="image/x-icon" href="./img/favicons/favicon.svg">
 		<link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	</head>
 <body class="website" id="website">
 	@@include('blocks/header.html')
 	<div class="website__layout">
 		<main class="website__main main" id="main">
 			<div class="main__wrapper">
-				Контент сайта
+				@@include('blocks/slider.html')
+				@@include('blocks/benefits.html')
+				@@include('blocks/catalog.html')
+				@@include('blocks/popular.html')
 			</div>
 		</main>
 	</div>
